@@ -2,6 +2,18 @@
 
 This document contains a list of changes for each release of Krang.
 
+=head2 3.17 - In Development
+
+=over
+
+=item *
+
+Added a method to ElementClass which can be overridden to decide
+during a publish if a L<Krang::ElementClass::CategoryLink> should
+cause other stories to be published. [Brad Oaks]
+
+=back
+
 =head2 3.16 - January, 25 2011
 
 =over
